refactor the backend code